Added rest call for example

--- a/infrastructure/adapter-rest/pom.xml
+++ b/infrastructure/adapter-rest/pom.xml
@@ -64,11 +64,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-       <!--  <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-mapstruct-binding</artifactId>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-jackson</artifactId>
         </dependency>
- -->
+
         <!-- Utility for easy annotation based mapper creation -->
         <dependency>
             <groupId>org.mapstruct</groupId>
